--- a/content/送球機構設計與模擬.html
+++ b/content/送球機構設計與模擬.html
@@ -220,10 +220,10 @@ img {
 <p><span>Final version更改的內容是圓柱體的部分，由於上一版無法使球滾至上方，後來設計120度的槽，使球進入圓柱體內會隨著螺旋桿滾動而慢慢向上。</span></p>
 <p><span><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%9C%80%E7%B5%82%E7%89%88(%E6%9B%B4%E6%94%B9%E6%A9%9F%E6%A7%8B).png" width="700"/></span></p>
 <hr/>
-<p><span><span>第三版<span>送球機構模擬(Final version)(40623227):</span></span></span></p>
+<p><span><span>第三版<span>送球機構模擬(Final version)(40623239):</span></span></span></p>
 <p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/11gsF8cmWe-smvEbjm1lbG-k2j1HFvuxB/view?usp=sharing">送球機構第三版</a></span></span></span></p>
 <p><span><span><span>已成功完成送球部分</span></span></span></p>
-<p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C4rlbqa0E6Y" width="500"></iframe></span></span></span></p>
+<p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rjQ5rFQhfuM" width="500"></iframe></span></span></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>成品 : (40623248)</p>
@@ -291,8 +291,7 @@ img {
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p>
-<br />V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示</div>
+<p></p><br />V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示</div>
         
     <!-- footer -->
       <div class="container">
