--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -325,11 +325,30 @@
 <h4>零件 BOM</h4>
 <p>手足球零組件材料表 (含零組件下載連結)</p>
 <h4>零件尺寸圖</h4>
-<p>零件尺寸圖</p>
-<h4>零件部分組裝圖</h4>
-<p>零件部分組裝圖</p>
-<h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/1e17a238d46da990d0c7e221">手足球檯</a> (40623207)</p>
+<p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-09-53.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/32a531477cae56892754fa44">球桿</a> <span>(40623207)</span></p>
+<p><img alt="" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-12-46.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/71b5862f70de853e5d07ab54">足球員</a> <span>(40623207)</span></p>
+<p><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-11-08.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/187554bc4743779840e8366b">彈簧</a> <span>(40623207)</span></p>
+<p><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-13-43.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/83e0407648881862be451c37">球門</a> <span>(40623207)</span></p>
+<p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-08-37.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/2995013b9344ed2ad81cfa44">螺旋桿</a> <span>(40623207)</span></p>
+<p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-14-24.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/1cbe22f9bdfdc57ce0f2356c">軌道</a> <span>(40623207)</span></p>
+<p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-06-19.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/65a33896e0ed789ba1fa969d">送球管</a> <span>(40623207)</span></p>
+<p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-02-24.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/2a8d22277b41df5e7fe7e30f">中間軌道</a> <span>(40623207)</span></p>
+<p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-03-14.png" width="800"/></p>
+<h4><strong>零件部分組裝圖</strong></h4>
+<p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/d41b63a6d82e52aa96abcf08">球桿+足球員+彈簧</a> <span>(40623207)</span></p>
+<p><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-15-43.png" width="800"/></p>
+<p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/97c6eed8f618d680331e1d10">送球機構</a> <span>(40623207)</span></p>
+<h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/><br/><br/><strong>3D 零組件爆炸圖</strong></h4>
+<p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/0a30216732f3cfd171a17706">爆炸圖</a> (40623207)<br/><br/><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-53-36.png" width="800"/></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <h4>手足球零件格式說明</h4>
@@ -413,8 +432,7 @@
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
-<h1>V-rep 動態模擬</h1>
+<p>3D 零組件爆炸圖</p><h1>V-rep 動態模擬</h1>
 <h2>送球機構設計與模擬</h2>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
@@ -483,10 +501,10 @@
 <p><span>Final version更改的內容是圓柱體的部分，由於上一版無法使球滾至上方，後來設計120度的槽，使球進入圓柱體內會隨著螺旋桿滾動而慢慢向上。</span></p>
 <p><span><img alt="" height="426" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%9C%80%E7%B5%82%E7%89%88(%E6%9B%B4%E6%94%B9%E6%A9%9F%E6%A7%8B).png" width="700"/></span></p>
 <hr/>
-<p><span><span>第三版<span>送球機構模擬(Final version)(40623227):</span></span></span></p>
+<p><span><span>第三版<span>送球機構模擬(Final version)(40623239):</span></span></span></p>
 <p><span><span><span>下載連結:<a href="https://drive.google.com/file/d/11gsF8cmWe-smvEbjm1lbG-k2j1HFvuxB/view?usp=sharing">送球機構第三版</a></span></span></span></p>
 <p><span><span><span>已成功完成送球部分</span></span></span></p>
-<p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C4rlbqa0E6Y" width="500"></iframe></span></span></span></p>
+<p><span><span><span><img alt="" src="https://youtu.be/C4rlbqa0E6Y" width="500"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rjQ5rFQhfuM" width="500"></iframe></span></span></span></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>成品 : (40623248)</p>
@@ -554,8 +572,7 @@
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p>
-<h2>系統功能展示</h2>
+<p></p><h2>系統功能展示</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <hr/>
