add bg3 content

--- a/config/content.htm
+++ b/config/content.htm
@@ -257,6 +257,13 @@
 <p><span>彈簧規格:不鏽鋼線彈簧，壓縮率25%，線徑2.8mm，外徑20mm，內徑14.4mm。</span></p>
 <p><span><img alt="" height="418" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320704.PNG?raw=true" width="300"/></span></p>
 <p><span>球員整體尺寸設計為由老師提供之尺寸作微調。</span></p>
+<p><span><img caption="false" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320708.PNG?raw=true" width="284"/>  <img alt="" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320705.PNG?raw=true" width="107"/></span></p>
+<p><span><img alt="" height="56" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320706.PNG?raw=true" width="180"/>  <img caption="false" height="43" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320707.PNG?raw=true" width="300"/></span></p>
+<p><span>軌道誓言著主體的外圍跑，所以基本的尺寸是以主體做設計，內部的尺寸是大於球的直徑，為了要讓球順利滾到送球機構，軌道有設計微小的角度。</span></p>
+<p><span><img alt="" height="259" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320709.PNG?raw=true" width="180"/></span></p>
+<p><span>送球的主要機構，螺旋線圍繞直徑25的圓柱，軌道以螺旋線作掃出，馬達轉4-5圈球就能送到頂端。</span></p>
+<p><span><img caption="false" height="167" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320710.PNG?raw=true" width="300"/></span></p>
+<p><span>手足球組利完成圖。</span></p>
 <p><strong>Onshape 零組件連結</strong></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/c901b55e1b511649bc1fa923">Player</a></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/5eb8eb18255bd7a939be3c04">Ball seat<span>(cover of ball seat)</span></a><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/1eac6640064e2f017e246017"></a></p>
@@ -409,11 +416,11 @@
 <h4>3D 零組件爆炸圖</h4>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">(零組件爆炸圖展示過程</yt-formatted-string><span>Final version </span><span>- 40623224</span><span>)</span></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/PigXInnJzQo" width="500"></iframe></p>
-<hr/>
+<hr>
 <p><img alt="" height="495" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E5%88%86%E8%A7%A3%E5%9C%96.png" width="700"/></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/af133cb2d0141d46acd8f8bd">3D 零組件爆炸圖</a></span><span>Final version</span><span> - 40623224</span><span>)</span></p>
 <p></p>
-<hr/>
+<hr>
 <h4><strong>BG5</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
@@ -437,7 +444,7 @@
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
 <p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">送球機構</a> 40623206</p>
-<hr/>
+<hr>
 <h4><strong>BG2</strong></h4>
 <p>初版送球機構設計 (40623215)</p>
 <p><img caption="false" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%BA%95%E9%83%A8.PNG" width="700"/></p>
@@ -453,7 +460,7 @@
 <p><span><img alt="" height="501" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E6%B4%9E.PNG" width="854"/></span></p>
 <p><span>連同球桿改動，路徑改為和傾斜後的球檯平行，故不會有因球檯傾斜而球員踢不到球的情形。</span></p>
 <p><span><img alt="" height="466" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E7%B8%AB%E7%B7%9A.PNG" width="842"/></span></p>
-<hr/>
+<hr>
 <h4><strong>BG3</strong></h4>
 <p>從第十二週開始分配工作<span>，第十二週開始進行送球機構設計及模擬</span></p>
 <p><span>第十二週開始設計<a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/7cfc018e3aba5469c187fc26">門框</a>，並且同時匯入到V-rep進行模擬測試門框是否可做動</span></p>
@@ -678,4 +685,4 @@
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
