--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -257,6 +257,13 @@
 <p><span>彈簧規格:不鏽鋼線彈簧，壓縮率25%，線徑2.8mm，外徑20mm，內徑14.4mm。</span></p>
 <p><span><img alt="" height="418" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320704.PNG?raw=true" width="300"/></span></p>
 <p><span>球員整體尺寸設計為由老師提供之尺寸作微調。</span></p>
+<p><span><img caption="false" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320708.PNG?raw=true" width="284"/><img alt="" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320705.PNG?raw=true" width="107"/></span></p>
+<p><span><img alt="" height="56" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320706.PNG?raw=true" width="180"/><img caption="false" height="43" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320707.PNG?raw=true" width="300"/></span></p>
+<p><span>軌道誓言著主體的外圍跑，所以基本的尺寸是以主體做設計，內部的尺寸是大於球的直徑，為了要讓球順利滾到送球機構，軌道有設計微小的角度。</span></p>
+<p><span><img alt="" height="259" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320709.PNG?raw=true" width="180"/></span></p>
+<p><span>送球的主要機構，螺旋線圍繞直徑25的圓柱，軌道以螺旋線作掃出，馬達轉4-5圈球就能送到頂端。</span></p>
+<p><span><img caption="false" height="167" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320710.PNG?raw=true" width="300"/></span></p>
+<p><span>手足球組利完成圖。</span></p>
 <p><strong>Onshape 零組件連結</strong></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/c901b55e1b511649bc1fa923">Player</a></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/5eb8eb18255bd7a939be3c04">Ball seat<span>(cover of ball seat)</span></a><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/1eac6640064e2f017e246017"></a></p>
@@ -343,11 +350,11 @@
 <p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-02-24.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/2a8d22277b41df5e7fe7e30f">中間軌道</a> <span>(40623207)</span></p>
 <p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-03-14.png" width="800"/></p>
-<h4><strong>零件部分組裝圖</strong></h4>
+<h4>零件部分組裝圖</h4>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/d41b63a6d82e52aa96abcf08">球桿+足球員+彈簧</a> <span>(40623207)</span></p>
 <p><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-15-43.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/97c6eed8f618d680331e1d10">送球機構</a> <span>(40623207)</span></p>
-<h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/><br/><br/><strong>3D 零組件爆炸圖</strong></h4>
+<h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/><br/><br/>3D 零組件爆炸圖</h4>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/0a30216732f3cfd171a17706">爆炸圖</a> (40623207)<br/><br/><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-53-36.png" width="800"/></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
