--- a/config/content.htm
+++ b/config/content.htm
@@ -416,11 +416,11 @@
 <h4>3D 零組件爆炸圖</h4>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">(零組件爆炸圖展示過程</yt-formatted-string><span>Final version </span><span>- 40623224</span><span>)</span></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/PigXInnJzQo" width="500"></iframe></p>
-<hr>
+<hr/>
 <p><img alt="" height="495" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E5%88%86%E8%A7%A3%E5%9C%96.png" width="700"/></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/af133cb2d0141d46acd8f8bd">3D 零組件爆炸圖</a></span><span>Final version</span><span> - 40623224</span><span>)</span></p>
 <p></p>
-<hr>
+<hr/>
 <h4><strong>BG5</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
@@ -444,7 +444,7 @@
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
 <p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">送球機構</a> 40623206</p>
-<hr>
+<hr/>
 <h4><strong>BG2</strong></h4>
 <p>初版送球機構設計 (40623215)</p>
 <p><img caption="false" height="634" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%BA%95%E9%83%A8.PNG" width="700"/></p>
@@ -460,7 +460,7 @@
 <p><span><img alt="" height="501" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E6%B4%9E.PNG" width="854"/></span></p>
 <p><span>連同球桿改動，路徑改為和傾斜後的球檯平行，故不會有因球檯傾斜而球員踢不到球的情形。</span></p>
 <p><span><img alt="" height="466" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E4%BA%8C%E7%B8%AB%E7%B7%9A.PNG" width="842"/></span></p>
-<hr>
+<hr/>
 <h4><strong>BG3</strong></h4>
 <p>從第十二週開始分配工作<span>，第十二週開始進行送球機構設計及模擬</span></p>
 <p><span>第十二週開始設計<a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/7cfc018e3aba5469c187fc26">門框</a>，並且同時匯入到V-rep進行模擬測試門框是否可做動</span></p>
@@ -685,4 +685,4 @@
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p></hr></hr></hr></hr>
+<p><span></span></p>
