--- a/config/content.htm
+++ b/config/content.htm
@@ -259,7 +259,8 @@
 <p><span>球員整體尺寸設計為由老師提供之尺寸作微調。</span></p>
 <p><span><img caption="false" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320708.PNG?raw=true" width="284"/>  <img alt="" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320705.PNG?raw=true" width="107"/></span></p>
 <p><span><img alt="" height="56" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320706.PNG?raw=true" width="180"/>  <img caption="false" height="43" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320707.PNG?raw=true" width="300"/></span></p>
-<p><span>軌道誓言著主體的外圍跑，所以基本的尺寸是以主體做設計，內部的尺寸是大於球的直徑，為了要讓球順利滾到送球機構，軌道有設計微小的角度。</span></p>
+<p><span>軌道是沿著主體的外圍跑，所以基本的尺寸是以主體做設計，</span></p>
+<p><span>內部的尺寸是大於球的直徑，為了要讓球順利滾到送球機構，軌道有設計微小的角度。</span></p>
 <p><span><img alt="" height="259" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320709.PNG?raw=true" width="180"/></span></p>
 <p><span>送球的主要機構，螺旋線圍繞直徑25的圓柱，軌道以螺旋線作掃出，馬達轉4-5圈球就能送到頂端。</span></p>
 <p><span><img caption="false" height="167" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320710.PNG?raw=true" width="300"/></span></p>
@@ -272,6 +273,7 @@
 <p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/40e39c3ff2f78f7d8f4a7703">Base</a></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/0e3d6cf103458a0b429660c3">Throwing mechanism assembly</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475"><br/></a></span></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">Assembly</a></p>
+<p>edit:40423207</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
