--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -259,7 +259,8 @@
 <p><span>球員整體尺寸設計為由老師提供之尺寸作微調。</span></p>
 <p><span><img caption="false" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320708.PNG?raw=true" width="284"/>  <img alt="" height="180" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320705.PNG?raw=true" width="107"/></span></p>
 <p><span><img alt="" height="56" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320706.PNG?raw=true" width="180"/>  <img caption="false" height="43" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320707.PNG?raw=true" width="300"/></span></p>
-<p><span>軌道誓言著主體的外圍跑，所以基本的尺寸是以主體做設計，內部的尺寸是大於球的直徑，為了要讓球順利滾到送球機構，軌道有設計微小的角度。</span></p>
+<p><span>軌道是沿著主體的外圍跑，所以基本的尺寸是以主體做設計，</span></p>
+<p><span>內部的尺寸是大於球的直徑，為了要讓球順利滾到送球機構，軌道有設計微小的角度。</span></p>
 <p><span><img alt="" height="259" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320709.PNG?raw=true" width="180"/></span></p>
 <p><span>送球的主要機構，螺旋線圍繞直徑25的圓柱，軌道以螺旋線作掃出，馬達轉4-5圈球就能送到頂端。</span></p>
 <p><span><img caption="false" height="167" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320710.PNG?raw=true" width="300"/></span></p>
@@ -272,10 +273,25 @@
 <p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/40e39c3ff2f78f7d8f4a7703">Base</a></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/0e3d6cf103458a0b429660c3">Throwing mechanism assembly</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475"><br/></a></span></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">Assembly</a></p>
+<p>edit:40423207</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/8182042e294da60a1378f180/w/a5ffb3782e81b4dc9036b9a0/e/6791359546e1a992a4116c0a">手足球台</a>(40623238)</p>
+<p><img alt="" height="244" src="https://mdecadp2018.github.io/site-40623238/images/%E6%AA%94%E5%A1%8A.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/0507a44f3c92018ed688b3da/w/09cf74ff8957e4c223b26650/e/3ebc5c6c000f4a953a089d90">擋塊<span>(40623238)</span></a></p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E6%89%8B%E8%B6%B3%E7%90%83%E4%BA%BA.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/174fcc117e0b76885ba0781f/w/7cd41834b3a1485cb1f93b93/e/68438ffe8735d9c395949ef8">手足球人<span>(40623238)</span></a></p>
+<p><img alt="" height="245" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AA.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/8182685c9295188b99f450ab/w/abcb73afe891887874840ccd/e/aa7d59c2e01f67b27fef359c">握把A<span>(40623238)</span></a></p>
+<p><img alt="" height="244" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AB.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/cfe9e3bc6742e75b7f0dafda/w/0e4180ed107b81a7b2f4a59d/e/ec3f901e667c103ee8f30350">握把B<span>(40623238)</span></a></p>
+<p><img alt="" height="245" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AC.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a">握把C<span>(40623238)</span></a></p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AD.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/3d6946f11d2a4aad3a545a96/w/7fe207169aedad43fd21b29f/e/61d2306697d2d34b4bdfc38c">握把D<span>(40623238)</span></a></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
@@ -672,17 +688,17 @@
 <h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr/>
+<hr>
 <h4><strong>BG2</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr/>
+<hr>
 <h4><strong>BG3</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr/>
+<hr>
 <h4><strong>BG4</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
-<hr/>
+<hr>
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
