--- a/config/content.htm
+++ b/config/content.htm
@@ -278,6 +278,34 @@
 <h4><strong>BG4</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/8182042e294da60a1378f180/w/a5ffb3782e81b4dc9036b9a0/e/6791359546e1a992a4116c0a">手足球台</a>(40623238)</p>
+<p><img alt="" height="244" src="https://mdecadp2018.github.io/site-40623238/images/%E6%AA%94%E5%A1%8A.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/0507a44f3c92018ed688b3da/w/09cf74ff8957e4c223b26650/e/3ebc5c6c000f4a953a089d90">擋塊<span>(40623238)</span></a></p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E6%89%8B%E8%B6%B3%E7%90%83%E4%BA%BA.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/174fcc117e0b76885ba0781f/w/7cd41834b3a1485cb1f93b93/e/68438ffe8735d9c395949ef8">手足球人<span>(40623238)</span></a></p>
+<p><img alt="" height="245" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AA.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/8182685c9295188b99f450ab/w/abcb73afe891887874840ccd/e/aa7d59c2e01f67b27fef359c">握把A<span>(40623238)</span></a></p>
+<p><img alt="" height="244" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AB.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/cfe9e3bc6742e75b7f0dafda/w/0e4180ed107b81a7b2f4a59d/e/ec3f901e667c103ee8f30350">握把B<span>(40623238)</span></a></p>
+<p><img alt="" height="245" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AC.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a">握把C<span>(40623238)</span></a></p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E6%8F%A1%E6%8A%8AD.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/3d6946f11d2a4aad3a545a96/w/7fe207169aedad43fd21b29f/e/61d2306697d2d34b4bdfc38c">握把D<span>(40623238)</span></a></p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E6%A1%8C%E8%A7%92.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/944f097d4a31c3e25e936fb4/w/ab9a5405708375b27ac4ad14/e/a9f2158af7b1eda780b389e2">送球機構足球檯桌角</a><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a"><span>(40623238)</span></a><a href="https://cad.onshape.com/documents/944f097d4a31c3e25e936fb4/w/ab9a5405708375b27ac4ad14/e/a9f2158af7b1eda780b389e2"></a></p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%B4%BB%E5%A1%9E%E6%94%AF%E6%92%90%E6%A1%BF.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/a038e0acdafef5ad86d2c04d/w/7dcad35ad6169d124a84d991/e/071b21edc84e85bc2fc69293">送球機構活塞支撐桿</a><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a"><span>(40623238)</span></a><a href="https://cad.onshape.com/documents/a038e0acdafef5ad86d2c04d/w/7dcad35ad6169d124a84d991/e/071b21edc84e85bc2fc69293"></a></p>
+<p><img alt="" height="245" src="https://mdecadp2018.github.io/site-40623238/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%B4%BB%E5%A1%9E%E6%A1%BF.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/8cc5b596d2bf41287b54c1e9/w/1678fc4acb02e639c8f59fc2/e/6b4522524b10b698bfc20a8a">送球機構活塞桿</a><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a"><span>(40623238)</span></a><a href="https://cad.onshape.com/documents/8cc5b596d2bf41287b54c1e9/w/1678fc4acb02e639c8f59fc2/e/6b4522524b10b698bfc20a8a"></a></p>
+<p><img alt="" height="245" src="https://mdecadp2018.github.io/site-40623238/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%B4%BB%E5%A1%9E.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/d81b32d24e93c7e97537024e/w/f921bf884fd98e34ecd51175/e/30a025537816c687308bc0ca">送球機構活塞</a><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a"><span>(40623238)</span></a><a href="https://cad.onshape.com/documents/d81b32d24e93c7e97537024e/w/f921bf884fd98e34ecd51175/e/30a025537816c687308bc0ca"></a></p>
+<p><img alt="" height="245" src="https://mdecadp2018.github.io/site-40623238/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%BD%89%E8%BC%AA.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/907a3d11b974308d9f38b1f5/w/f80f7846fd5931ef2370b016/e/5f1ee4db3071caf5d60910d7">送球機構轉輪</a><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a"><span>(40623238)</span></a><a href="https://cad.onshape.com/documents/907a3d11b974308d9f38b1f5/w/f80f7846fd5931ef2370b016/e/5f1ee4db3071caf5d60910d7"></a></p>
+<p><img alt="" height="246" src="https://mdecadp2018.github.io/site-40623238/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E5%9C%93%E6%9F%B1.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/120e2d62bd801d4d918ff675/w/e1b4daf0e16bb79f136a6455/e/4caa7982b5bbe4b8564a2897">送球機構圓柱</a><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a"><span>(40623238)</span></a><a href="https://cad.onshape.com/documents/120e2d62bd801d4d918ff675/w/e1b4daf0e16bb79f136a6455/e/4caa7982b5bbe4b8564a2897"></a></p>
+<p><img alt="" height="247" src="https://mdecadp2018.github.io/site-40623238/images/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E6%BB%BE%E9%81%93.png" width="500"/></p>
+<p><a href="https://cad.onshape.com/documents/8cb97301d8075aa8fa01d579/w/14a0d2d0b604b06e6ced91c9/e/8ce1fa329db333c28fd9a971">送球機構滾道</a><a href="https://cad.onshape.com/documents/72525254ef1ffdd33c4ffca0/w/fa72d383e90c7320632653c5/e/6eccd2c3567a1046e1710c8a"><span>(40623238)</span></a><a href="https://cad.onshape.com/documents/8cb97301d8075aa8fa01d579/w/14a0d2d0b604b06e6ced91c9/e/8ce1fa329db333c28fd9a971"></a></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
