--- a/config/content.htm
+++ b/config/content.htm
@@ -699,7 +699,7 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<h2>專案報告書</h2>
+<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/content/%E5%B0%88%E6%A1%88%E5%8F%A3%E9%A0%AD%E7%B0%A1%E5%A0%B1.html">40623244 林俊鎧結案口頭簡報</a></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
 <hr/>
