add images with onshape

--- a/content/細部設計與 BOM.html
+++ b/content/細部設計與 BOM.html
@@ -167,9 +167,13 @@ img {
 <p>送球機構<span> 40623206</span></p>
 <h4>3D 零組件爆炸圖</h4>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/0984e5fceef79bc6ab33085e">foosball - explosion</a> <span>40623206</span></p>
+<p><span><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-40-34.png" width="800"/></span></p>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/f13fe80bc56ba5263114a5db">foosball - explosion drawing</a> <span>40623206</span></p>
+<p><span><img caption="false" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-40-17.png" width="800"/></span></p>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/e13cc5000b20206d63c05401">Ball sending mechanism - explosion</a> <span>40623206</span></p>
+<p><span><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-39-41.png" width="800"/></span></p>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/d88618d390dbbdab60b23d38">Ball sending mechanism - explosion drawing</a> <span>40623206</span></p>
+<p><span><img caption="false" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-38-58.png" width="800"/></span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <h4>手足球零件格式說明</h4>
