--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -242,8 +242,11 @@
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
 <p><a href="https://cad.onshape.com/documents/f30f0cd8b9dc8ca3ed4382c3/w/0a449a9e4794341cffde87a0/e/93676ac54a40f293a85fc29b">手足球初步設計</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-21-21.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/b92411abdaebe22e0adb8b3c/w/211dd7c5430e48c89a541e3a/e/0d575eaebd2dd08fd7b498a4">送球機構初步設計</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-36-05.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">手足球+送球機構完成圖</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-12_19-56-34.gif" width="800"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
@@ -340,9 +343,13 @@
 <p>送球機構<span> 40623206</span></p>
 <h4>3D 零組件爆炸圖</h4>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/0984e5fceef79bc6ab33085e">foosball - explosion</a> <span>40623206</span></p>
+<p><span><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-40-34.png" width="800"/></span></p>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/f13fe80bc56ba5263114a5db">foosball - explosion drawing</a> <span>40623206</span></p>
+<p><span><img caption="false" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-40-17.png" width="800"/></span></p>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/e13cc5000b20206d63c05401">Ball sending mechanism - explosion</a> <span>40623206</span></p>
+<p><span><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-39-41.png" width="800"/></span></p>
 <p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/d88618d390dbbdab60b23d38">Ball sending mechanism - explosion drawing</a> <span>40623206</span></p>
+<p><span><img caption="false" height="568" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-38-58.png" width="800"/></span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <h4>手足球零件格式說明</h4>
@@ -699,7 +706,7 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<h2>專案報告書</h2>
+<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/content/%E5%B0%88%E6%A1%88%E5%8F%A3%E9%A0%AD%E7%B0%A1%E5%A0%B1.html">40623244 林俊鎧結案口頭簡報</a></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
 <hr/>
