--- a/content/參數設計與繪圖.html
+++ b/content/參數設計與繪圖.html
@@ -157,8 +157,11 @@ img {
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
 <p><a href="https://cad.onshape.com/documents/f30f0cd8b9dc8ca3ed4382c3/w/0a449a9e4794341cffde87a0/e/93676ac54a40f293a85fc29b">手足球初步設計</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-21-21.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/b92411abdaebe22e0adb8b3c/w/211dd7c5430e48c89a541e3a/e/0d575eaebd2dd08fd7b498a4">送球機構初步設計</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-36-05.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">手足球+送球機構完成圖</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-12_19-56-34.gif" width="800"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
