--- a/content/送球機構設計與模擬.html
+++ b/content/送球機構設計與模擬.html
@@ -155,7 +155,9 @@ img {
     <div id="tipue_search_content">V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示<br /><h1>送球機構設計與模擬</h1>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/p37_19-23-46.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">送球機構</a> 40623206</p>
+<p><img caption="false" height="376" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-06-12_19-56-34.gif" width="800"/></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>初版送球機構設計 (40623215)</p>
