--- a/config/content.htm
+++ b/config/content.htm
@@ -655,6 +655,9 @@
 <p><span>利用下面的程式限制球員的移動距離。</span></p>
 <p><span><img alt="" height="289" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/40623225-w12-1.png" width="500"/></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/rcA3xKkyCaQ" width="500"></iframe></span></p>
+<p><span>最終版手足球模擬-手動對手動(40623225)</span></p>
+<p><span>下載連結:<a href="https://drive.google.com/open?id=1g7dYrdT94Rtb55AgdVyrPanAW1tU_pCe">手動最終版</a></span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="325" src="//www.youtube.com/embed/ltAH5UlB6ds" width="500"></iframe></p>
 <p><span></span></p>
 <p><span>第一版手足球模擬-機器對機器(40623227):</span></p>
 <p>下載連結;<a href="https://drive.google.com/file/d/125ZPS3O3h64K_FeiV0U-3l9h1GSbCjqI/view?usp=sharing">機器第一版</a></p>
