--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -161,6 +161,7 @@ img {
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
