--- a/config/content.htm
+++ b/config/content.htm
@@ -845,7 +845,8 @@ end
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
-<p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><a href="https://www.youtube.com/watch?v=UKmK8mvFx0E">40623236 黃子峰結案口頭簡報</a></p>
+<p></p>
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
