--- a/content/參數設計與繪圖.html
+++ b/content/參數設計與繪圖.html
@@ -243,7 +243,8 @@ img {
 <p>Onshape 零組件連結</p>
 <p><a href="https://cad.onshape.com/documents/beea80ab157b5c6fce1314ef/w/48391349dbaefae52b3ad62d/e/0c9ee64798e9da17fc76db8b">手足球球場</a>(40623204)</p>
 <p><a href="https://cad.onshape.com/documents/42c36a84d62950168ebca0f3/w/f1702970d1df65d422c8473c/e/bd76f28373fbad738b5cb1ae">手足球員</a><span>(40623204)</span></p>
-<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p><br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
+<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p>
+<br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
         
     <!-- footer -->
       <div class="container">
