--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -353,8 +353,11 @@ end
 <p>大致上都已完成只缺送球機構，此版本球員還未能準確抓住球路線，但能簡易判定球位址</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bnAa8GlCFDQ" width="500"></iframe></p>
 <p><span>最終版手足球模擬-機器對手動(40423158):</span></p>
+<p>參考學弟程式碼再加以小修正</p>
+<p>修正<a href="https://40423158.github.io/2019cd/content/%E6%89%8B%E5%8B%95VS%E9%9B%BB%E8%85%A6.html">網址</a></p>
 <p>下載連結;<a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">機器對手動(最終版)</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/m5kw-mUYSu0" width="500"></iframe></p>
+<p></p>
 <p></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
@@ -373,7 +376,8 @@ end
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='結案報告.html'>Next</a> >> 結案報告</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
+<br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='結案報告.html'>Next</a> >> 結案報告</div>
         
     <!-- footer -->
       <div class="container">
