--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -328,7 +328,8 @@
 <p>Onshape 零組件連結</p>
 <p><a href="https://cad.onshape.com/documents/beea80ab157b5c6fce1314ef/w/48391349dbaefae52b3ad62d/e/0c9ee64798e9da17fc76db8b">手足球球場</a>(40623204)</p>
 <p><a href="https://cad.onshape.com/documents/42c36a84d62950168ebca0f3/w/f1702970d1df65d422c8473c/e/bd76f28373fbad738b5cb1ae">手足球員</a><span>(40623204)</span></p>
-<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p><h2>細部設計與 BOM</h2>
+<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p>
+<h2>細部設計與 BOM</h2>
 <h4><strong>BG1</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
@@ -476,7 +477,8 @@
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p><h1>V-rep 動態模擬</h1>
+<p>3D 零組件爆炸圖</p>
+<h1>V-rep 動態模擬</h1>
 <h2>送球機構設計與模擬</h2>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
@@ -618,7 +620,8 @@
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p><h2>系統功能展示</h2>
+<p></p>
+<h2>系統功能展示</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <hr/>
@@ -819,8 +822,11 @@ end
 <p>大致上都已完成只缺送球機構，此版本球員還未能準確抓住球路線，但能簡易判定球位址</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bnAa8GlCFDQ" width="500"></iframe></p>
 <p><span>最終版手足球模擬-機器對手動(40423158):</span></p>
+<p>參考學弟程式碼再加以小修正</p>
+<p>修正<a href="https://40423158.github.io/2019cd/content/%E6%89%8B%E5%8B%95VS%E9%9B%BB%E8%85%A6.html">網址</a></p>
 <p>下載連結;<a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">機器對手動(最終版)</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/m5kw-mUYSu0" width="500"></iframe></p>
+<p></p>
 <p></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
@@ -839,7 +845,8 @@ end
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
+<h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -854,12 +861,14 @@ end
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://youtu.be/I-U-JlEgs5M">40623239 許登貴結案口頭簡報</a></span></p>
+<p><a href="https://www.youtube.com/watch?v=hSHOce4l9pE&amp;feature=youtu.be">40423158 莊子慶結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_wRHtEhC5MI">40623201 王君庭結案口頭簡報</a></span></p>
 <p><a href="https://www.youtube.com/watch?v=-Ix7WbmB5Jw">40623244 林俊鎧結案口頭簡報</a></p>
-<p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p><h2>專案報告書</h2>
+<p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p>
+<h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
 <hr/>
