--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -171,9 +171,9 @@ img {
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_wRHtEhC5MI">40623201 王君庭結案口頭簡報</a></span></p>
+<p><a href="https://www.youtube.com/watch?v=K63U3U_98Mk&amp;t=3s">40623217 楊傅博結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=-Ix7WbmB5Jw">40623244 林俊鎧結案口頭簡報</a></p>
-<p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p>
-<br />結案報告 << <a href='結案報告.html'>Previous</a> <a href='專案報告書.html'>Next</a> >> 專案報告書</div>
+<p><a href="https://youtu.be/sLmyLK9pJms">40623223 任明彥結案口頭簡報</a></p><br />結案報告 << <a href='結案報告.html'>Previous</a> <a href='專案報告書.html'>Next</a> >> 專案報告書</div>
         
     <!-- footer -->
       <div class="container">
